--- a/static/main.css
+++ b/static/main.css
@@ -15,8 +15,16 @@ body {
     width: 600px;
 }
 
+select{
+    font-size: 20px;
+    background: black;
+    color: white;
+}
 
 
+option:checked { 
+    color: red; 
+}
 #taskheader {
 position: fixed;
 top:0;
@@ -83,8 +91,8 @@ input[type="checkbox"] {
     color: whitesmoke;
 }
 .text{
-    width: 80%;
-    margin: 0px 15px;
+    width: 100%;
+    /* margin: 0px 15px; */
     background-color: transparent;
     border: none;
     color: white;
@@ -93,8 +101,7 @@ input[type="checkbox"] {
 }
 
 .text:hover {
-    cursor: pointer;
-    
+    cursor: pointer;   
 }
 
 .inputtags {
@@ -120,17 +127,45 @@ input[type="checkbox"] {
     margin-bottom: 10px;
     font-size: 30px;
 }
+.blue{
+    background-color: #000015;
+    border-right: 5px solid darkblue;
+}
 .red{
     background-color: #150000;
     border-right: 5px solid darkred;
+}
+.yellow{
+    background-color: #151500;
+    border-right: 5px solid darkgoldenrod;
+}
+.green{
+    background-color: #001500;
+    border-right: 5px solid darkgreen;
+}
+.cyan{
+    background-color: #001515;
+    border-right: 5px solid cyan;
+}
+.grey{
+    background-color: #090909;
+    border-right: 5px solid darkgrey;
+}
+.white{
+    /* background-color: #000000; */
+    /* border-right: 5px solid darkgreen; */
 }
 .cantdo {
     color: grey;
 }
 .selected {
-    background-color: #011619;
+    /* background-color: #011619; */
     /* margin-left: -10px; */
     /* border-left: 10px solid #38a1ca; */
+}
+.selected .text{
+    border-right: 5px solid whitesmoke;
+    /* color:black; */
 }
 .delete{
 }
