--- a/mobile/mobile.css
+++ b/mobile/mobile.css
@@ -82,8 +82,8 @@ input[type="checkbox"] {
 
 
 .editor {
-    top: 0;
-    position: fixed;
+    /* top: 0; */
+    /* position: fixed; */
     font-size: 20pt;
 }
 
