--- a/mobile/mobile.css
+++ b/mobile/mobile.css
@@ -21,8 +21,8 @@ body {
 select {
     width: 100%;
     /* font-size: 20px; */
-    background: black;
-    color: white;
+    /* background: black; */
+    color: black;
 }
 
 option {
